@@ -1,3 +1,7 @@
+psad-2.4.3 (12//2015):
+    - Bug fix in fwcheck_psad related to an uninitialized variable related to
+      firewalld deployments.
+
 psad-2.4.2 (11/29/2015):
     - Bug fix to apply the EMAIL_ALERT_DANGER_LEVEL threshold to auto-blocking
       emails (reported by itoffshore@github).
